# xdoctest

./: .codecov.yml  .coveragerc  .gitignore  .mailmap  .readthedocs.yml  .travis.yml  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  README.rst  appveyor.yml  clean.sh  coveragerc  fail.py  make_rtd.py  optional-requirements.txt  publish.sh  pyproject.toml  pytest.ini  requirements.txt  run_developer_setup.sh  run_doctests.sh  run_linter.sh  run_tests.py  setup.py  tox.ini  whatsnew.txt
.circleci/: config.yml
.github/workflows/: release.yml  setup_action_secrets.md  setup_secrets.sh  tests.yml
_compare/: base.py  base_common.py  base_diff.py  compare.py
dev/: _old_pkgutil_code.py  _travis_CI_old.yml  backwards_incompatiblity_examples_inthewild.py  bench_contains_set_vs_list.py  check_pytest_version_compat.py  ci_public_gpg_key.pgp.enc  ci_secret_gpg_key.pgp.enc  ci_secret_gpg_subkeys.pgp.enc  countmin.py  demo_dynamic_analysis.py  demo_errors.py  demo_issues.py  demo_usage_with_logger.py  extension_proposal.py  fix_sphinx_mwe.py  gpg_owner_trust  gpg_owner_trust.enc  interactive_embed_tests.py  make_rtd.py  make_strict_req.sh  outline.md  parse_changelog.py  parse_rst.py  port_ubelt_utils.py  run_linter.py  secrets_configuration.sh  setup_secrets.sh  spell_passlist.txt  talk.py  torch_exposed_issues.py  travis_public_gpg_key.pgp.enc  travis_secret_gpg_key.pgp.enc
dev/_compare/: compare.py  demo_enhancements.py  demo_failures.py  demo_issue_106.py
dev/demo/: demo_dynamic_analysis.py  demo_errors.py  demo_issues.py  demo_properties.py  demo_usage_with_logger.py
dev/devcheck/: interactive_embed_tests.py
dev/maintain/: port_ubelt_utils.py
docs/: Makefile  make.bat  requirements.txt  todo.rst
docs/source/: conf.py  index.rst  installing_python.rst  modules.rst  redirects  xdoctest.checker.rst  xdoctest.constants.rst  xdoctest.core.rst  xdoctest.demo.rst  xdoctest.directive.rst  xdoctest.docstr.convert_google_to_numpy.rst  xdoctest.docstr.docscrape_google.rst  xdoctest.docstr.docscrape_numpy.rst  xdoctest.docstr.rst  xdoctest.doctest_example.rst  xdoctest.doctest_part.rst  xdoctest.dynamic_analysis.rst  xdoctest.exceptions.rst  xdoctest.global_state.rst  xdoctest.parser.rst  xdoctest.plugin.rst  xdoctest.rst  xdoctest.runner.rst  xdoctest.static_analysis.rst  xdoctest.utils.rst  xdoctest.utils.util_deprecation.rst  xdoctest.utils.util_import.rst  xdoctest.utils.util_misc.rst  xdoctest.utils.util_mixins.rst  xdoctest.utils.util_notebook.rst  xdoctest.utils.util_path.rst  xdoctest.utils.util_str.rst  xdoctest.utils.util_stream.rst
docs/source/auto/: xdoctest.__main__.rst  xdoctest._tokenize.rst  xdoctest.checker.rst  xdoctest.constants.rst  xdoctest.core.rst  xdoctest.demo.rst  xdoctest.directive.rst  xdoctest.docstr.docscrape_google.rst  xdoctest.docstr.docscrape_numpy.rst  xdoctest.docstr.rst  xdoctest.doctest_example.rst  xdoctest.doctest_part.rst  xdoctest.dynamic_analysis.rst  xdoctest.exceptions.rst  xdoctest.global_state.rst  xdoctest.parser.rst  xdoctest.plugin.rst  xdoctest.rst  xdoctest.runner.rst  xdoctest.static_analysis.rst  xdoctest.utils.rst  xdoctest.utils.util_deprecation.rst  xdoctest.utils.util_import.rst  xdoctest.utils.util_misc.rst  xdoctest.utils.util_mixins.rst  xdoctest.utils.util_notebook.rst  (+3 more)
doctest2/: colors.py  core.py  docscrape_google.py  doctest_parser.py  doctest_patch.py  plugin.py  static_analysis.py  utils.py
doctest2/old/: parse_doctests.py
doctest2/tests/: test_doctest2.py  test_doctest_parser.py  test_static.py
ignore/: oldway.py
requirements/: async.txt  colors.txt  docs.txt  jupyter.txt  optional.txt  problematic.txt  runtime.txt  tests-binary.txt  tests.txt
src/xdoctest/: __init__.py  __main__.py  __main__.pyi  _tokenize.py  checker.py  checker.pyi  constants.py  constants.pyi  core.py  core.pyi  demo.py  demo.pyi  directive.py  directive.pyi  doctest_example.py  doctest_example.pyi  doctest_part.py  doctest_part.pyi  dynamic_analysis.py  dynamic_analysis.pyi  exceptions.py  exceptions.pyi  global_state.py  global_state.pyi  parser.py  parser.pyi  plugin.py  plugin.pyi  runner.py  runner.pyi  static_analysis.py  static_analysis.pyi
testing/: _grave.py  notebook_with_doctests.ipynb  test_binary_ext.py  test_cases.py  test_checker.py  test_core.py  test_directive.py  test_doctest_example.py  test_doctest_parser.py  test_dynamic.py  test_entry_point.py  test_errors.py  test_import.py  test_limitations.py  test_notebook.py  test_parser.py  test_plugin.py  test_pytest_cli.py  test_pytest_errors.py  test_runner.py  test_static.py  test_traceback.py  test_xdoctest.py
testing/pybind11_test/: CMakeLists.txt  clean.sh  my_ext.cxx  run_dynamic_test.sh  setup.py
tests/: notebook_with_doctests.ipynb  test_binary_ext.py  test_cases.py  test_checker.py  test_core.py  test_directive.py  test_doctest_example.py  test_doctest_in_notebook.ipynb  test_dynamic.py  test_entry_point.py  test_errors.py  test_import.py  test_limitations.py  test_notebook.py  test_parser.py  test_plugin.py  test_preimport.py  test_pytest_cli.py  test_runner.py  test_static.py  test_traceback.py  test_write_outputs.py
tests/pybind11_test/: CMakeLists.txt  clean.sh  setup.py
xdoctest/: __init__.py  __main__.py  __main__.pyi  checker.py  checker.pyi  constants.py  core.py  core.pyi  demo.py  directive.py  directive.pyi  docscrape_google.py  doctest_example.py  doctest_example.pyi  doctest_parser.py  doctest_part.py  doctest_part.pyi  dynamic_analysis.py  exceptions.py  exceptions.pyi  global_state.py  parser.py  parser.pyi  plugin.py  plugin.pyi  runner.py  runner.pyi  static_analysis.py  static_analysis.pyi  utils.py
xdoctest/docstr/: __init__.py  convert_google_to_numpy.py  docscrape_google.py  docscrape_numpy.py
xdoctest/old/: doctest_patch.py
xdoctest/tests/: test_doctest2.py  test_doctest_parser.py  test_xdoctest.py
xdoctest/utils/: __init__.py  util_deprecation.py  util_import.py  util_import.pyi  util_misc.py  util_mixins.py  util_notebook.py  util_path.py  util_path.pyi  util_str.py  util_str.pyi  util_stream.py  util_stream.pyi
(+26 files in other folders)
