[build-system]
requires = [ "setuptools>=41.0.1",]

[tool.mypy]
ignore_missing_imports = true

[tool.xcookie]
tags = [ "erotemic", "github", "purepy",]
mod_name = "xdoctest"
repo_name = "xdoctest"
rel_mod_parent_dpath = "."
os = [ "all", "win", "linux", "osx",]
min_python = 2.7
author = "Jon Crall"
author_email = "erotemic@gmail.com"
description = "A module cut from xcookie"
license = "Apache 2"

[tool.pytest.ini_options]
addopts = "-p no:doctest --xdoctest --xdoctest-style=google --ignore-glob=setup.py --ignore-glob=dev"
norecursedirs = ".git ignore build __pycache__ dev _skbuild"
filterwarnings = [ "default", "ignore:.*No cfgstr given in Cacher constructor or call.*:Warning", "ignore:.*Define the __nice__ method for.*:Warning", "ignore:.*private pytest class or function.*:Warning",]

[tool.coverage.run]
branch = true
source = ["xdoctest"]

[tool.coverage.report]
exclude_lines = [ "pragma: no cover", ".*  # pragma: no cover", ".*  # nocover", "def __repr__", "raise AssertionError", "raise NotImplementedError", "if 0:", "if trace is not None", "verbose = .*", "^ *raise", "^ *pass *$", "if _debug:", "if __name__ == .__main__.:", ".*if six.PY2:",]
omit = [ "xdoctest/__main__.py", "*/setup.py",]
